k8s/builder-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.12.0 ()
  creationTimestamp: null
  labels:
    app: builder
  name: builder
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: builder
    spec:
      containers:
      - image: takutakahashi/k8s-docker-image-builder:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        name: builder
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /secrets
          name: gcloud-credentials
          readOnly: true
        - name: github-ssh
          mountPath: /root/.ssh
          readOnly: false
        - mountPath: /var/run/docker.sock
          name: docker-sock
      restartPolicy: Always
      volumes:
      - name: gcloud-credentials
        secret:
          secretName: cloudsql-oauth-credentials
          items:
            - key: credentials.json
              path: credentials.json
      - name: github-ssh
        secret:
          secretName: github-sshkey
          defaultMode: 0644
          items:
          - key: id_rsa
            path: id_rsa
            mode: 0600
          - key: config
            path: config
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
status: {}
