k8s/builder-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose
    kompose.version: 1.12.0 ()
  creationTimestamp: null
  labels:
    app: builder
  name: builder
spec:
  type: NodePort
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: builder
status:
  loadBalancer: {}
