k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: builder
spec:
  tls:
    - secretName: tls
  rules:
  - host: build.example.com
    http:
      paths:
      - backend:
          serviceName: builder
          servicePort: 8080
